--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
   <div class="section-title">📸 Galeri Foto</div>
   <div class="gallery">
     <div class="item">
-      <img src="https://via.placeholder.com/300x200?text=Foto+1" alt="Foto 1">
-      <div class="caption">Kegiatan Upacara Bendera</div>
+      <img src="coro keren.jpg" alt="Foto 1">
+      <div class="caption">menolak tua</div>
     </div>
     <div class="item">
-      <img src="https://via.placeholder.com/300x200?text=Foto+2" alt="Foto 2">
-      <div class="caption">Kunjungan ke Museum</div>
+      <img src="stasiun TA.jpg" alt="Foto 2">
+      <div class="caption">Stasiun Tulungagung</div>
     </div>
     <div class="item">
-      <img src="https://via.placeholder.com/300x200?text=Foto+3" alt="Foto 3">
-      <div class="caption">Lomba Hari Kemerdekaan</div>
+      <img src="coro2.jpg" alt="Foto 3">
+      <div class="caption">Si Putih</div>
     </div>
   </div>
 
@@ -78,7 +78,7 @@
   <div class="gallery">
     <div class="item">
       <video controls>
-        <source src="video1.mp4" type="video/mp4">
+        <source src="https://raw.githubusercontent.com/Siharga-AIC/galeri/main/muslim%20andalus.mp4" type="video/mp4">
         Video tidak didukung di browser ini.
       </video>
       <div class="caption">Pentas Seni Kelas 4</div>
