--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 
-  <h1>Galeri Kegiatan Ceria</h1>
+  <h1>Galeri KURMA</h1>
 
   <div class="section-title">📸 Galeri Foto</div>
   <div class="gallery">
